--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,27 @@
+html {
+  height: 100%;
+  background-color: transparent;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
     'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #cecece;
+  height: 100%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+.section__100 {
+  height: 50%;
+  max-height: 90%;
+}
+
+.jotform-form {
+  padding: 0;
 }
